# game-of-life-simple

./: CHANGELOG.md  game-of-life.cabal  notes.md
app/: BrickMain.hs  GlossMain.hs  Main.hs
src/: GOL.hs
