cabal-version:      3.0
name:               game-of-life
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Joseph Haugh
maintainer:         jhaugh@cs.unm.edu
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:  GOL
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable game-of-life
    import:           warnings
    main-is:          Main.hs
    other-modules:    GlossMain
                    , BrickMain
    build-depends:    base ^>=4.17.2.1
                    , game-of-life
                    , gloss
                    , brick
                    , vty
                    , vty-crossplatform
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite game-of-life-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        game-of-life
